[gd_scene load_steps=11 format=3 uid="uid://cnmb8iru3kw43"]

[ext_resource type="Texture2D" uid="uid://d38ceuoo614k4" path="res://assets/bg.png" id="1_7ac2o"]
[ext_resource type="Script" path="res://main.gd" id="1_20ubq"]
[ext_resource type="PackedScene" uid="uid://ccqamkib3h3jt" path="res://pipe.tscn" id="2_1nggw"]
[ext_resource type="PackedScene" uid="uid://w0nnognvl1bq" path="res://bird.tscn" id="2_kfbyv"]
[ext_resource type="PackedScene" uid="uid://be0628tjbdq75" path="res://ground.tscn" id="3_5sxf2"]
[ext_resource type="PackedScene" uid="uid://cvjumhbsokt5v" path="res://game_over.tscn" id="6_s6vd3"]
[ext_resource type="FontFile" uid="uid://bpwnjdce1ba1j" path="res://assets/flappy.ttf" id="7_reif0"]
[ext_resource type="PackedScene" uid="uid://c8hy6bddqntv0" path="res://start.tscn" id="8_2viiw"]
[ext_resource type="AudioStream" uid="uid://x2kplm6b3533" path="res://mixkit-video-game-treasure-2066.mp3" id="9_jb4wl"]
[ext_resource type="AudioStream" uid="uid://b4t64lryxx1cw" path="res://deathflappy.mp3" id="10_4536r"]

[node name="main" type="Node"]
script = ExtResource("1_20ubq")
pipe_scene = ExtResource("2_1nggw")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("1_7ac2o")
offset = Vector2(432, 384)

[node name="Ground" parent="." instance=ExtResource("3_5sxf2")]
z_index = 1

[node name="Bird" parent="." instance=ExtResource("2_kfbyv")]

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ScoreLabel" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.5
offset_right = 36.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "SCORE : 0"

[node name="GameOver" parent="." instance=ExtResource("6_s6vd3")]

[node name="Flappy_Name" type="Label" parent="."]
offset_left = 250.0
offset_top = 342.0
offset_right = 673.0
offset_bottom = 419.0
theme_override_fonts/font = ExtResource("7_reif0")
theme_override_font_sizes/font_size = 76
text = "Flappy Bird"

[node name="Start" parent="." instance=ExtResource("8_2viiw")]

[node name="sfx_startgame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_jb4wl")
volume_db = -16.0

[node name="sfx_stopgame" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_4536r")
volume_db = -16.0

[connection signal="hit" from="Ground" to="." method="_on_ground_hit"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="restart" from="GameOver" to="." method="_on_game_over_restart"]
